--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ STYLESHEETS
 ================================
 ================================
 -->
-    <body style="overflow-y:hidden;">
+    <body>
         <nav id="cd-vertical-nav">
             <ul>
                 <li>
@@ -126,7 +126,8 @@ STYLESHEETS
 PRELOADER
 ============================== -->
         <div class="preloader">
-            <div class="status">&nbsp;</div>
+            <div class="status">&nbsp;
+</div>
         </div>
         <!-- =========================
 HEADER
@@ -136,7 +137,7 @@ HEADER
 
             <!-- COLOR OVER IMAGE -->
             <div class="color-overlay full-screen">
-                <!-- To make header full screen. Use .full-screen class with color overlay. Example: <div class="color-overlay full-screen">  -->
+
 
                 <!-- STICKY NAVIGATION -->
                 <div class="navbar navbar-inverse bs-docs-nav navbar-fixed-top sticky-navigation">
@@ -567,8 +568,6 @@ AUTOR SECTION
             <!-- /END CONTAINER -->
 
         </section>
-        <a href="#home" class="cd-top">Top</a>
-        <!-- /END AUTHOR SECTION -->
 
         <!-- equations and inequalities SECTION
 ==============================
@@ -717,6 +716,7 @@ W(x)=((7*x+3)*x+5)*x+9)*x+1,</br> są to 4 mnożenia i 4 dodawania.</br> Postać
 
     </section>
 <!-- /END equations and inequalities SECTION-->
+        <a href="#home" class="cd-top">Top</a>
 
 <!-- =========================
 SCRIPTS
