amendments, working at new sections

--- a/game.html
+++ b/game.html
@@ -1,143 +1,140 @@
 <!doctype html>
 <html lang="pl">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Strona o schemacie Hornera">
-    <meta name="keywords" content="Schemat Hornera, Horner, Schemat, Matematyka, Zadania">
-    <meta name="author" content="Kamil Best">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="Strona o schemacie Hornera">
+        <meta name="keywords" content="Schemat Hornera, Horner, Schemat, Matematyka, Zadania">
+        <meta name="author" content="Kamil Best">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <!-- SITE TITLE -->
-    <title>Schemat Hornera</title>
+        <!-- SITE TITLE -->
+        <title>Schemat Hornera</title>
 
-    <!-- =========================
+        <!-- =========================
 FAV AND TOUCH ICONS
 ============================== -->
-    <link rel="icon" href="images/favicon2.png">
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+        <link rel="icon" href="images/favicon2.png">
+        <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
 
-    <!-- =========================
+        <!-- =========================
 STYLESHEETS
 ============================== -->
-    <!-- BOOTSTRAP -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+        <!-- BOOTSTRAP -->
+        <link rel="stylesheet" href="css/bootstrap.min.css">
 
-    <!-- FONT ICONS -->
-    <link rel="stylesheet" href="assets/elegant-icons/style.css">
-    <link rel="stylesheet" href="assets/app-icons/styles.css">
-    <!--[if lte IE 7]><script src="lte-ie7.js"></script><![endif]-->
-    <!-- BACK TO TOP -->
-    <link rel="stylesheet" href="css/reset.css">
-    <!-- CSS reset -->
-    <link rel="stylesheet" href="css/back-to-top.css">
-    <!-- Gem style -->
+        <!-- FONT ICONS -->
+        <link rel="stylesheet" href="assets/elegant-icons/style.css">
+        <link rel="stylesheet" href="assets/app-icons/styles.css">
+        <!--[if lte IE 7]><script src="lte-ie7.js"></script><![endif]-->
+        <!-- BACK TO TOP -->
+        <link rel="stylesheet" href="css/reset.css">
+        <!-- CSS reset -->
+        <link rel="stylesheet" href="css/back-to-top.css">
+        <!-- Gem style -->
 
-    <!-- DOT_NAVIGATION -->
-    <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/dot-nav.css">
-    <!-- Resource style -->
+        <!-- DOT_NAVIGATION -->
+        <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,700' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="css/dot-nav.css">
+        <!-- Resource style -->
 
-    <!-- WEB FONTS -->
-    <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,100italic,400,300italic' rel='stylesheet' type='text/css'>
+        <!-- WEB FONTS -->
+        <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,100italic,400,300italic' rel='stylesheet' type='text/css'>
 
-    <!-- CAROUSEL AND LIGHTBOX -->
-    <link rel="stylesheet" href="css/owl.theme.css">
-    <link rel="stylesheet" href="css/owl.carousel.css">
-    <link rel="stylesheet" href="css/nivo-lightbox.css">
-    <link rel="stylesheet" href="css/nivo_themes/default/default.css">
+        <!-- CAROUSEL AND LIGHTBOX -->
+        <link rel="stylesheet" href="css/owl.theme.css">
+        <link rel="stylesheet" href="css/owl.carousel.css">
+        <link rel="stylesheet" href="css/nivo-lightbox.css">
+        <link rel="stylesheet" href="css/nivo_themes/default/default.css">
 
-    <!-- ANIMATIONS -->
-    <link rel="stylesheet" href="css/animate.min.css">
+        <!-- ANIMATIONS -->
+        <link rel="stylesheet" href="css/animate.min.css">
 
-    <!-- CUSTOM STYLESHEETS -->
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/game.css">
+        <!-- CUSTOM STYLESHEETS -->
+        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/game.css">
 
-    <!-- COLORS -->
-    <link rel="stylesheet" href="css/colors.css">
-    <!-- DEFAULT COLOR/
+        <!-- COLORS -->
+        <link rel="stylesheet" href="css/colors.css">
+        <!-- DEFAULT COLOR/
 
 <!-- RESPONSIVE FIXES -->
-    <link rel="stylesheet" href="css/responsive.css">
-
-    <!-- JQUERY -->
+        <link rel="stylesheet" href="css/responsive.css">
 
 
-
-</head>
-<!--
+    </head>
+    <!--
 ############################
 
 BODY
 
 ############################
 -->
-<body style="overflow-y:hidden;">
-    <nav id="cd-vertical-nav">
-        <ul>
-            <li>
-                <a href="#home" data-number="1">
-                    <span class="cd-dot"></span>
-                    <span class="cd-label">aaa</span>
-                </a>
-            </li>
-            <li>
-                <a href="#znajdz_pierwiastki" data-number="2">
-                    <span class="cd-dot"></span>
-                    <span class="cd-label">bbb</span>
-                </a>
-            </li>
-            <li>
-                <a href="#zmien_system" data-number="3">
-                    <span class="cd-dot"></span>
-                    <span class="cd-label">ccc</span>
-                </a>
-            </li>
+    <body style="overflow-y:hidden;">
+        <nav id="cd-vertical-nav">
+            <ul>
+                <li>
+                    <a href="#home" data-number="1">
+                        <span class="cd-dot"></span>
+                        <span class="cd-label">aaa</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#znajdz_pierwiastki" data-number="2">
+                        <span class="cd-dot"></span>
+                        <span class="cd-label">bbb</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#zmien_system" data-number="3">
+                        <span class="cd-dot"></span>
+                        <span class="cd-label">ccc</span>
+                    </a>
+                </li>
 
-        </ul>
-    </nav>
+            </ul>
+        </nav>
 
-    <!-- =========================
+        <!-- =========================
 PRELOADER
 ============================== -->
-    <div class="preloader">
-        <div class="status">&nbsp;</div>
-    </div>
-    <!-- =========================
+        <div class="preloader">
+            <div class="status">&nbsp;</div>
+        </div>
+        <!-- =========================
 HEADER
 ============================== -->
-    <!-- content here -->
-    <header  class="header change-dot"  data-stellar-background-ratio="0.5" id="home">
+        <!-- content here -->
+        <header  class="header change-dot"  data-stellar-background-ratio="0.5" id="home">
 
 
-        <!-- COLOR OVER IMAGE -->
-        <div class="color-overlay">
-            <!-- To make header full screen. Use .full-screen class with color overlay. Example: <div class="color-overlay full-screen">  -->
+            <!-- COLOR OVER IMAGE -->
+            <div class="color-overlay">
+                <!-- To make header full screen. Use .full-screen class with color overlay. Example: <div class="color-overlay full-screen">  -->
 
-            <!-- STICKY NAVIGATION -->
-            <div class="navbar navbar-inverse bs-docs-nav navbar-fixed-top sticky-navigation">
-                <div class="container">
-                    <div class="navbar-header">
+                <!-- STICKY NAVIGATION -->
+                <div class="navbar navbar-inverse bs-docs-nav navbar-fixed-top sticky-navigation">
+                    <div class="container">
+                        <div class="navbar-header">
 
-                        <!-- LOGO ON STICKY NAV BAR -->
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#kane-navigation">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="index.html">
-                            <img src="images/logo2.svg" alt="Strona główna">
-                        </a>
-                    </div>
+                            <!-- LOGO ON STICKY NAV BAR -->
+                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#kane-navigation">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <a class="navbar-brand" href="index.html">
+                                <img src="images/logo2.svg" alt="Strona główna">
+                            </a>
+                        </div>
 
-                    <!-- NAVIGATION LINKS -->
-                    <div class="navbar-collapse collapse" id="kane-navigation">
-                        <ul class="nav navbar-nav navbar-right main-navigation">
-                             </li>
+                        <!-- NAVIGATION LINKS -->
+                        <div class="navbar-collapse collapse" id="kane-navigation">
+                            <ul class="nav navbar-nav navbar-right main-navigation">
+                                </li>
                             <li><a href="index.html">Strona główna</a>
                             </li>
                             <li>
@@ -147,7 +144,7 @@ HEADER
                             </li>
 
 
-                        </ul>
+                            </ul>
                     </div>
                 </div>
                 <!-- /END CONTAINER -->
@@ -183,7 +180,7 @@ HEADER
 
                             <!-- BUTTON -->
                             <div class="buttons" id="download-button">
-                                <a href="#znajdz_pierwiastki" class="btn btn-default btn-lg standard-button"><i class="arrow_carrot-2down"></i>Przejdź dalej</a>
+                                <a href="#znajdz_pierwiastki" class="btn btn-default btn-lg standard-button"><i class="icon-scroll"></i>Przejdź dalej</a>
 
                             </div>
 
@@ -198,9 +195,9 @@ HEADER
 
             </div>
             <!-- /END CONTAINER -->
-        </div>
+            </div>
         <!-- /END COLOR OVERLAY -->
-    </header>
+        </header>
     <!-- /END HEADER -->
 
     <!--
@@ -208,31 +205,48 @@ WSTĘP
 Obliczanie pierwiastkow SECTION
 ============================== -->
     <section class="app-brief deep-dark-bg change-dot" id="znajdz_pierwiastki">
-        <div class="center-block">
-       <div role="tabpanel">
+        <div class="row">
+        <div class="col-md-6 col-md-offset-2">
 
-  <!-- Nav tabs -->
-  <ul class="nav nav-tabs" role="tablist">
-    <li role="presentation" class="active"><a href="#content1" aria-controls="content1" role="tab" data-toggle="tab">Test 1</a></li>
-    <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Test 2</a></li>
-    <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Test 3</a></li>
-    <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Test 4</a></li>
-  </ul>
-
-  <!-- Tab panes -->
-  <div class="tab-content">
-    <div role="tabpanel" class="tab-pane active" id="content1">Lorem ipsum  1 dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</div>
-    <div role="tabpanel" class="tab-pane" id="profile">Lorem ipsum 2dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</div>
-    <div role="tabpanel" class="tab-pane" id="messages">Lorem ipsum 3 dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</div>
-    <div role="tabpanel" class="tab-pane" id="settings">Lorem ipsum 4 dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</div>
-  </div>
-
-</div>
-
+            <table id="horners_method">
+                <tr class="up">
+                    <td class="tytul">SCHEMAT HORNERA</td>
+                    <td>(Upuść tutaj)</td>
+                    <td>(Upuść tutaj)</td>
+                    <td>(Upuść tutaj)</td>
+                    <td>(Upuść tutaj)</td>
+                </tr>
+                <tr class="down">
+                    <td class="up">(Upuść tutaj)</td>
+                    <td>(Upuść tutaj)</td>
+                    <td>(Upuść tutaj)</td>
+                    <td>(Upuść tutaj)</td>
+                    <td>(Upuść tutaj)</td>
+                </tr>
+            </table>        </div>
+        <div class="col-md-3 col-md-offset-2">
+            <table class="down">
+                <tr >
+                    <td class="makeMeDraggable">1</td>
+                    <td class="makeMeDraggable">2</td>
+                    <td class="makeMeDraggable">3</td>
+                </tr>
+                <tr >
+                    <td class="makeMeDraggable">4</td>
+                    <td class="makeMeDraggable">5</td>
+                    <td class="makeMeDraggable">6</td>
+                </tr>
+                <tr >
+                    <td class="makeMeDraggable">7</td>
+                    <td class="makeMeDraggable">8</td>
+                    <td class="makeMeDraggable">9</td>
+                </tr>
+            </table>
         </div>
-      </section>
+            </div>
+    </section>
 
-        <a href="#home" class="cd-top">Top</a>
+    <a href="#home" class="cd-top">Top</a>
 
     <!-- =========================
 SCRIPTS
@@ -241,6 +255,7 @@ SCRIPTS
     <script src="js/vendor/jquery-2.1.1.js"></script>
     <script src="js/vendor/bootstrap.min.js"></script>
     <script src="js/vendor/mathlib.js"></script>
+    <script src="js/game.js"></script>
     <script src="js/dot-nav.js"></script>
     <script src="js/popover.js"></script>
     <script src="js/back-to-top.js"></script>
@@ -258,6 +273,6 @@ SCRIPTS
     <script src="js/vendor/plugins/jquery.ajaxchimp.min.js"></script>
     <script src="js/vendor/plugins/jquery.fitvids.js"></script>
     <script src="js/vendor/plugins/custom.js"></script>
-</body>
+    </body>
 
 </html>
