--- a/kalkulator.html
+++ b/kalkulator.html
@@ -186,7 +186,7 @@ HEADER
 
                             <!-- BUTTON -->
                             <div class="buttons" id="download-button">
-                                <a href="#znajdz_pierwiastki" class="btn btn-default btn-lg standard-button"><i class="arrow_carrot-2down"></i>Przejdź dalej</a>
+                                <a href="#znajdz_pierwiastki" class="btn btn-default btn-lg standard-button"><i class="icon-scroll"></i>Przejdź dalej</a>
 
                             </div>
 
