--- a/kalkulator.html
+++ b/kalkulator.html
@@ -141,7 +141,7 @@ HEADER
                     <div class="navbar-collapse collapse" id="kane-navigation">
                         <ul class="nav navbar-nav navbar-right main-navigation">
                              </li>
-                            <li><a href="index.html">Strona główna</a>
+                            <li><a href="index.html">Strona główna-powrót</a>
                             </li>
                             <li>
                                 <a href="#znajdz_pierwiastki">Obliczanie pierwiastków</a>
